<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <!--Personal Bio Settings-->
    <PreferenceCategory
        app:title="@string/personalbio_title"
        app:icon="@drawable/ic_baseline_person_24">

        <EditTextPreference
            app:key="userFullName"
            app:title="@string/name_title"
            app:useSimpleSummaryProvider="true" />

        <ListPreference
            app:defaultValue="reply"
            app:entries="@array/reply_entries"
            app:entryValues="@array/reply_values"
            app:key="reply"
            app:title="@string/reply_title"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

    <!--Connection Settings-->
    <PreferenceCategory
        app:title="@string/valueConnections"
        app:icon="@drawable/ic_baseline_link_24">

        <SwitchPreferenceCompat
            app:key="sync"
            app:summaryOff="@string/showconnections_summary_off"
            app:summaryOn="@string/showconnections_summary_on"
            app:title="@string/showconnections_title" />

        <SwitchPreferenceCompat
            app:dependency="sync"
            app:key="attachment"
            app:summaryOff="@string/showconnections_summary_off"
            app:summaryOn="@string/attachment_summary_on"
            app:title="@string/linkedin_title" />

        <SwitchPreferenceCompat
            app:dependency="sync"
            app:key="attachment"
            app:summaryOff="@string/showconnections_summary_off"
            app:summaryOn="@string/attachment_summary_on"
            app:title="@string/instagram_title" />

        <SwitchPreferenceCompat
            app:dependency="sync"
            app:key="attachment"
            app:summaryOff="@string/showconnections_summary_off"
            app:summaryOn="@string/attachment_summary_on"
            app:title="@string/twitter_title" />

        <SwitchPreferenceCompat
            app:dependency="sync"
            app:key="attachment"
            app:summaryOff="@string/showconnections_summary_off"
            app:summaryOn="@string/attachment_summary_on"
            app:title="@string/website_title" />

    </PreferenceCategory>

    <!--Notification Settings-->
    <PreferenceCategory
        app:title="@string/notifications_title"
        app:icon="@drawable/ic_baseline_notifications_24">

        <SeekBarPreference
            android:key="volume_notifications"
            app:title="Volume"
            app:showSeekBarValue="true"
            app:defaultValue="50"/>
        <SwitchPreferenceCompat
            android:key="notificationsToggle"
            app:title="Disable Notifications"
            android:summaryOff="@string/notificationToggle_summary_on"
            android:summaryOn="@string/notificationToggle_summary_off"/>

    </PreferenceCategory>

    <!--Security Settings-->
    <PreferenceCategory
        app:title="@string/security_title"
        app:icon="@drawable/ic_baseline_security_24">

        <SwitchPreferenceCompat
            app:key="sync"
            app:title="@string/sync_title" />

        <SwitchPreferenceCompat
            app:dependency="sync"
            app:key="attachment"
            app:summaryOff="@string/attachment_summary_off"
            app:summaryOn="@string/attachment_summary_on"
            app:title="@string/attachment_title" />

    </PreferenceCategory>

</PreferenceScreen>