<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/advice_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/advice_title"
                style="@style/upload_title"/>

            <TextView
                android:id="@+id/advice_ins"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/advice_title"
                android:text="@string/advice_ins1"
                style="@style/upload_instruction"/>

            <RadioGroup
                android:id="@+id/advice_type_radial"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignStart="@id/advice_ins"
                android:layout_below="@id/advice_ins"
                android:layout_marginTop="10dp">
                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/adv_skill_dev"
                    android:text="@string/adv_skill_dev"
                    style="@style/category_selection_text"/>
                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/adv_pricing"
                    android:text="@string/adv_pricing"
                    style="@style/category_selection_text"/>
                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/adv_sales"
                    android:text="@string/adv_sales"
                    style="@style/category_selection_text"/>
                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/adv_promote"
                    android:text="@string/adv_promote"
                    style="@style/category_selection_text"/>
                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/adv_product"
                    android:text="@string/adv_product"
                    style="@style/category_selection_text"/>
                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/adv_find_supp"
                    android:text="@string/adv_find_supp"
                    style="@style/category_selection_text"/>
                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/adv_budget"
                    android:text="@string/adv_budget"
                    style="@style/category_selection_text"/>
                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/adv_business"
                    android:text="@string/adv_business"
                    style="@style/category_selection_text"/>
            </RadioGroup>

            <TextView
                android:id="@+id/advice_ins2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/advice_type_radial"
                android:text="@string/advice_ins2"
                android:layout_marginTop="10dp"
                style="@style/upload_instruction"/>

            <EditText
                android:id="@+id/advice_det_edit_text"
                android:layout_width="335dp"
                android:layout_height="270dp"
                android:layout_below="@id/advice_ins2"
                android:layout_marginTop="10dp"
                android:layout_centerHorizontal="true"
                android:background="@drawable/advice_detail_edit_text"
                />

            <TextView
                android:id="@+id/advice_feedback_fmt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/advice_det_edit_text"
                android:layout_alignStart="@id/advice_det_edit_text"
                android:layout_marginTop="15dp"
                android:textSize="18sp"
                android:textColor="@color/PVS_Purple"
                android:text="@string/advice_file_format"/>

            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/advice_feedback_fmt"
                android:layout_alignStart="@id/advice_feedback_fmt"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="30dp">
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/fmt_pdf"
                    android:text="@string/fmt_pdf"
                    style="@style/category_selection_text"/>
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/fmt_jpeg"
                    android:text="@string/fmt_jpeg"
                    style="@style/category_selection_text"/>
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/fmt_png"
                    android:text="@string/fmt_png"
                    style="@style/category_selection_text"/>
            </RadioGroup>
        </RelativeLayout>

    </ScrollView>

</RelativeLayout>