<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/category_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/category_title"
        style="@style/upload_title"/>

    <TextView
        android:id="@+id/category_ins"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/category_title"
        android:text="@string/category_instruction"
        style="@style/upload_instruction"/>

    <RadioGroup
        android:id="@+id/cat_select_radial"
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="20dp"
        android:layout_below="@id/category_ins"
        android:layout_centerInParent="true"
        >
        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/select_character_design"
            android:id="@+id/cat_char_design"
            style="@style/category_selection_text"/>
        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/cat_storyboarding"
            android:text="@string/select_storyboarding"
            style="@style/category_selection_text"/>
        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/cat_seq_art"
            android:text="@string/select_sequential_art"
            style="@style/category_selection_text"/>

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/cat_com_book"
            android:text="@string/select_comic_book"
            style="@style/category_selection_text"/>

    </RadioGroup>

    <LinearLayout
        android:id="@+id/save_next_layout_cat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/nextSaveLayout">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/uploadSaveButton_cat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/upload_save_button"
            style="@style/uploadSaveStyle"
            />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/uploadNextButton_cat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/upload_next_button"
            style="@style/uploadNextStyle"
            />
    </LinearLayout>


</RelativeLayout>